infra/terraform/nsg.json
{
  "defaultSecurityRules": [
    {
      "access": "Allow",
      "description": "Allow inbound traffic from all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/AllowVnetInBound",
      "name": "AllowVnetInBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow inbound traffic from azure load balancer",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "name": "AllowAzureLoadBalancerInBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "AzureLoadBalancer",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all inbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/DenyAllInBound",
      "name": "DenyAllInBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to all VMs in VNET",
      "destinationAddressPrefix": "VirtualNetwork",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/AllowVnetOutBound",
      "name": "AllowVnetOutBound",
      "priority": 65000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "VirtualNetwork",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Allow",
      "description": "Allow outbound traffic from all VMs to Internet",
      "destinationAddressPrefix": "Internet",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/AllowInternetOutBound",
      "name": "AllowInternetOutBound",
      "priority": 65001,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    },
    {
      "access": "Deny",
      "description": "Deny all outbound traffic",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "*",
      "destinationPortRanges": [],
      "direction": "Outbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/defaultSecurityRules/DenyAllOutBound",
      "name": "DenyAllOutBound",
      "priority": 65500,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
    }
  ],
  "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
  "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us",
  "location": "eastus",
  "name": "nsg-snet-aplicacao-us",
  "networkInterfaces": [
    {
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/RG-IMERSAO-ARQUITETOAZURE-US/providers/Microsoft.Network/networkInterfaces/VM-IMERSAO34",
      "resourceGroup": "RG-IMERSAO-ARQUITETOAZURE-US"
    }
  ],
  "provisioningState": "Succeeded",
  "resourceGroup": "rg-imersao-arquitetoazure-us",
  "resourceGuid": "04d51170-7241-4b87-b1ba-cdeafdd3af79",
  "securityRules": [
    {
      "access": "Allow",
      "description": "Liberar SSH My IP",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "22",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/securityRules/AllowSSH",
      "name": "AllowSSH",
      "priority": 100,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "179.146.39.212",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "description": "Allow Port HTTP",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "80",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/securityRules/AllowHTTP",
      "name": "AllowHTTP",
      "priority": 1000,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "description": "Allow Port HTTPs",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "443",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/securityRules/AllowHTTPs",
      "name": "AllowHTTPs",
      "priority": 1010,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    },
    {
      "access": "Allow",
      "description": "Allow Port  Node Port 3000",
      "destinationAddressPrefix": "*",
      "destinationAddressPrefixes": [],
      "destinationPortRange": "3000",
      "destinationPortRanges": [],
      "direction": "Inbound",
      "etag": "W/\"e13bbec5-2e3f-4140-bbc8-eb8220bbe9a3\"",
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/rg-imersao-arquitetoazure-us/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-aplicacao-us/securityRules/AllowNodePort",
      "name": "AllowNodePort",
      "priority": 1020,
      "protocol": "*",
      "provisioningState": "Succeeded",
      "resourceGroup": "rg-imersao-arquitetoazure-us",
      "sourceAddressPrefix": "*",
      "sourceAddressPrefixes": [],
      "sourcePortRange": "*",
      "sourcePortRanges": [],
      "type": "Microsoft.Network/networkSecurityGroups/securityRules"
    }
  ],
  "subnets": [
    {
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/RG-IMERSAO-ARQUITETOAZURE-US/providers/Microsoft.Network/virtualNetworks/VNET-IMERSSAO-US/subnets/SNET-APLICACAO",
      "resourceGroup": "RG-IMERSAO-ARQUITETOAZURE-US"
    },
    {
      "id": "/subscriptions/31f0817a-9efc-46d2-a0c2-3c9d85e77619/resourceGroups/RG-IMERSAO-ARQUITETOAZURE-US/providers/Microsoft.Network/virtualNetworks/VNET-IMERSSAO-US/subnets/SNET-DADOS",
      "resourceGroup": "RG-IMERSAO-ARQUITETOAZURE-US"
    }
  ],
  "tags": {},
  "type": "Microsoft.Network/networkSecurityGroups"
}
